3_debugging/1_part_1/6_catch_mixed_usage_of_single_and_double_quotes/output_6.txt
SyntaxError: unknown: Unexpected character '#' (1:43)

> 1 | let innerHtml = "<p>Click here to <a href="#Home">return home</a></p>";
    |                                            ^
  2 | console.log(innerHtml);
  3 | 